# blastjob

./: .gitignore  CLAUDE.md  README.md  blastjob.sh  pyproject.toml
scripts/: smoke_e2e.py  smoke_tui.py
src/blastjob/: __main__.py  app.py  config.py  logging.py
src/blastjob/core/: build.py  coverage.py  history.py  ingest.py  paths.py  refine.py  scoring.py  tracking.py
src/blastjob/exporters/: ats.py  docx.py  markdown.py  pdf.py
src/blastjob/importers/: docx.py  folder.py  pdf.py  text.py
src/blastjob/llm/: caching.py  client.py  cost.py  prompts.py  providers.py
src/blastjob/models/: config.py  coverage.py  fit_score.py  history.py  research.py  resume.py  tracking.py
src/blastjob/tui/: styles.tcss
src/blastjob/tui/screens/: build.py  history.py  home.py  ingest.py  refine.py  settings.py  work_history.py
src/blastjob/tui/widgets/: cost_bar.py  coverage_panel.py  nav_sidebar.py  stream_log.py
tests/: test_build_logic.py  test_caching.py  test_config.py  test_cost.py  test_coverage.py  test_exporters.py  test_history.py  test_importers.py  test_ingest_logic.py  test_logging.py  test_paths.py  test_providers.py  test_refine.py  test_tracking.py
